@@ -3,7 +3,7 @@
 <!DOCTYPE preferences SYSTEM "chrome://socialite/locale/preferences.dtd">
 <prefwindow id="socialitePreferences" xmlns="http://www.mozilla.org/keymaster/gatekeeper/there.is.only.xul" 
             title="&prefwindow.title;" 
-            style="width: 425px; min-height: 375px;" 
+            style="width: 425px; min-height: 425px;" 
             onload="SocialiteSitePreferences.load();"
             onunload="SocialiteSitePreferences.unload();">
   <prefpane id="socialitePreferencesGeneralPane" label="&general.title;" image="chrome://socialite/skin/general-preferences.png">
@@ -12,6 +12,8 @@
       <preference id="prefShowSiteMenuItems" name="extensions.socialite.showSiteMenuItems" type="bool"/>
       <preference id="prefConsolidateSites" name="extensions.socialite.consolidateSites" type="bool"/>
       <preference id="prefPersistMode" name="extensions.socialite.persistMode" type="int"/>
+      <preference id="prefRefreshIntervalEnabled" name="extensions.socialite.refreshIntervalEnabled" type="bool"/>
+      <preference id="prefRefreshInterval" name="extensions.socialite.refreshInterval" type="int"/>
     </preferences>
     
     <groupbox flex="1">
@@ -29,6 +31,20 @@
         <radio label="&sectionPersist.label;" accesskey="&sectionPersist.accesskey;" value="2"/>
         <radio label="&alwaysPersist.label;" accesskey="&alwaysPersist.accesskey;" value="3"/>
       </radiogroup>
+    </groupbox>
+
+    <groupbox flex="1">
+      <caption label="&networkGroup.caption;"/>
+      <hbox align="center">
+        <checkbox id="refreshCheckbox" label="&refreshInterval.label;"
+                  preference="prefRefreshIntervalEnabled"
+                  onsyncfrompreference="return SocialiteSitePreferences.refreshIntervalEnabledFromPreference();"/>
+        <textbox id="refreshIntervalTextbox" type="number" size="2"
+                  preference="prefRefreshInterval"
+                  onsyncfrompreference="return SocialiteSitePreferences.refreshIntervalFromPreference();"
+                  onsynctopreference="return SocialiteSitePreferences.refreshIntervalToPreference();"/>
+        <label value="&refreshIntervalMinutes.label;" control="refreshCheckbox" onclick="document.getElementById('refreshCheckbox').click();"/>
+      </hbox>
     </groupbox>
   </prefpane>
   
